zeebe/manifests/base/Deployment-zeebe-operate.yaml
---
# Source: zeebe-full/charts/operate/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zeebe-operate
  labels:
    app: zeebe-operate
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zeebe-operate
  template:
    metadata:
      labels:
        app: zeebe-operate
    spec:
      containers:
      - name: operate
        image: "camunda/operate:1.2.0"
        resources:
          requests:
            cpu: 500m
            memory: 512Mi
          limits:
            cpu: 1000m
            memory: 768Mi
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        volumeMounts:
        - name: config
          mountPath: /usr/local/operate/config/application.yml
          subPath: application.yml
      volumes:
      - name: config
        configMap:
          name: zeebe-operate
          defaultMode: 0744
      securityContext:
        null
