zeebe/manifests/base/StatefulSet-zeebe-zeebe.yaml
---
# Source: zeebe-full/charts/zeebe/templates/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: "zeebe-zeebe"
  labels:
    app.kubernetes.io/name: zeebe
    app.kubernetes.io/instance: zeebe
    app: "zeebe-zeebe"
    app: zeebe
  annotations:   
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: zeebe
      app.kubernetes.io/instance: zeebe
      app: "zeebe-zeebe"
  serviceName: "zeebe-zeebe"
  updateStrategy:
    type: RollingUpdate
  podManagementPolicy: Parallel
  template:
    metadata:
      labels:
        app.kubernetes.io/name: zeebe
        app.kubernetes.io/instance: zeebe
        app: "zeebe-zeebe"
      annotations:   
    spec:
      containers:
      - name: zeebe
        image: "camunda/zeebe:0.22.1"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9600
          name: http
        - containerPort: 26500
          name: gateway
        - containerPort: 26501
          name: command
        - containerPort: 26502
          name: internal
        readinessProbe:
          httpGet:
            path: /ready
            port: 9600
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
            limits:
              cpu: 1000m
              memory: 4Gi
            requests:
              cpu: 500m
              memory: 2Gi
        volumeMounts:
        - name: config
          mountPath: /usr/local/zeebe/conf/zeebe.cfg.toml
          subPath: zeebe.cfg.toml
        - name: config
          mountPath: /usr/local/bin/startup.sh
          subPath: startup.sh
        - name: data
          mountPath: /usr/local/zeebe/data
      volumes:
      - name: config
        configMap:
          name: "zeebe-zeebe"
          defaultMode: 0744
      securityContext:
        null
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ReadWriteOnce]
      resources:
        requests:
          storage: "10Gi"
