zeebe/manifests/base/Service-zeebe-nginx-ingress-controller.yaml
---
# Source: zeebe-full/charts/nginx-ingress/templates/controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nginx-ingress
    chart: nginx-ingress-1.26.2
    component: "controller"
    heritage: Helm
    release: zeebe
  name: zeebe-nginx-ingress-controller
spec:
  
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app: nginx-ingress
    component: "controller"
    release: zeebe
  type: "LoadBalancer"
